[6] CandleTokenizer Constructor - GREEN

--- a/DTW/Finance/Finance.csproj
+++ b/DTW/Finance/Finance.csproj
@@ -40,6 +40,7 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="CandleTokenizer.cs" />
     <Compile Include="FinanceData.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
