--- a/DTW/FinanceTest/FinanceTest.csproj
+++ b/DTW/FinanceTest/FinanceTest.csproj
@@ -53,6 +53,7 @@
   </Choose>
   <ItemGroup>
     <Compile Include="CandleTokenizer.cs" />
+    <Compile Include="DisjointMergeCandleTokenizer.cs" />
     <Compile Include="FinanceData.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
