--- a/DTW/GUI/GUI.csproj
+++ b/DTW/GUI/GUI.csproj
@@ -49,6 +49,12 @@
     </Reference>
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="GetInterval.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="GetInterval.Designer.cs">
+      <DependentUpon>GetInterval.cs</DependentUpon>
+    </Compile>
     <Compile Include="MainForm.cs">
       <SubType>Form</SubType>
     </Compile>
@@ -57,6 +63,9 @@
     </Compile>
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <EmbeddedResource Include="GetInterval.resx">
+      <DependentUpon>GetInterval.cs</DependentUpon>
+    </EmbeddedResource>
     <EmbeddedResource Include="MainForm.resx">
       <DependentUpon>MainForm.cs</DependentUpon>
     </EmbeddedResource>
