--- a/DTW/FinanceTest/FinanceTest.csproj
+++ b/DTW/FinanceTest/FinanceTest.csproj
@@ -55,6 +55,7 @@
     <Compile Include="CandleTokenizer.cs" />
     <Compile Include="DisjointMergeCandleTokenizer.cs" />
     <Compile Include="FinanceData.cs" />
+    <Compile Include="PartialCandleTokenizer.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <ItemGroup>
